# compilador-lis

./: .gitignore  README.md  compilador-lis.cabal
samples/: boolTest.lis  factorial.lis  fibonacci.lis  nToBinary.lis  sample1.lis  sample2.lis  sample3.lis  sample4.lis  summatory.lis
src/: AssemblyExecution.hs  AssemblyOptimization.hs  AssemblyRepresentation.hs  LISCompilation.hs  LISParser.hs  LISRepresentation.hs  Main.hs  MayFail.hs  ParserLib.hs  Pretty.hs  StackL.hs  StateMonad.hs
test/: AssemblyOptimizationSpec.hs  LISCompilationSpec.hs  LISExecutionSpec.hs  SamplesRunnerSpec.hs  StackLSpec.hs  StateMonadSpec.hs
