name:          compilador-lis
version:       1.0.0
license:       MIT
copyright:     (c) 2014 Federico Aloi
author:        Federico Aloi <federico.aloi@gmail.com>
maintainer:    Federico Aloi <federico.aloi@gmail.com>
build-type:    Simple
cabal-version: >= 1.8

library
  hs-source-dirs: src

  exposed-modules: StackL, StateMonad, AssemblyRepresentation, LISRepresentation, LISCompilation, Pretty

  build-depends: base == 4.*

test-suite spec
  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is: Spec.hs

  build-depends: base  == 4.*
               , hspec >= 1.3
               , compilador-lis
